added invariant functionality + changed styling

--- a/client/src/components/lab3/Lab3.css
+++ b/client/src/components/lab3/Lab3.css
@@ -5,15 +5,17 @@
 
 .link-button {
   text-decoration: none;
-  margin: 0;
-  border: 1px solid grey;
-  background-color: grey;
-  color: white;
-  width: 50%;
   font-weight: bold;
-  box-shadow: 0px 2px 6px 0px rgba(34, 34, 34, 0.4);
+  margin: 10px auto;
+  display: block;
+  width: 20%;
+  height: 100%;
+  color: black;
+  background-color: white;
+  box-shadow: 2px 2px 1px grey;
 }
 
-.link-button :hover {
-  background-color: black;
+.link-button:hover {
+  background-color: darkgray;
+  box-shadow: 3px 3px 1px gray;
 }
