--- a/client/src/components/lab4/table/Table.css
+++ b/client/src/components/lab4/table/Table.css
@@ -1,18 +1,69 @@
 table {
-  table-layout: fixed;
+  border: 1px solid #1c6ea4;
+  background-color: #eeeeee;
   width: 90%;
+  text-align: left;
   border-collapse: collapse;
-  border: 3px solid black;
-  margin: 5px auto;
+}
+table td,
+table th {
+  border: 1px solid #aaaaaa;
+  padding: 3px 2px;
+}
+table tbody td {
+  font-size: 13px;
+}
+table tr:nth-child(even) {
+  background: #d0e4f5;
+}
+table thead {
+  background: #1c6ea4;
+  background: -moz-linear-gradient(top, #5592bb 0%, #327cad 66%, #1c6ea4 100%);
+  background: -webkit-linear-gradient(
+    top,
+    #5592bb 0%,
+    #327cad 66%,
+    #1c6ea4 100%
+  );
+  background: linear-gradient(to bottom, #5592bb 0%, #327cad 66%, #1c6ea4 100%);
+  border-bottom: 2px solid #444444;
+}
+table thead th {
+  font-size: 15px;
+  font-weight: bold;
+  color: #ffffff;
+  border-left: 2px solid #d0e4f5;
+}
+table thead th:first-child {
+  border-left: none;
 }
 
-th,
-td {
-  padding: 5px;
-  text-align: center;
+.link-button {
+  margin: 10px auto;
+  display: block;
+  width: 20%;
+  height: 100%;
+  color: black;
+  background-color: white;
+  box-shadow: 2px 2px 1px grey;
 }
 
-th {
-  background-color: black;
-  color: white;
+.link-button:hover {
+  background-color: darkgray;
+  box-shadow: 3px 3px 1px gray;
+}
+
+.submit {
+  display: block;
+  margin: 10px auto;
+  width: 20%;
+  font-weight: bold;
+  color: black;
+  background-color: white;
+  box-shadow: 2px 2px 1px grey;
+}
+
+.submit:hover {
+  background-color: darkgray;
+  box-shadow: 3px 3px 1px gray;
 }
